WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
39359
[Qt] TiledBackingStore updates broken when not using resizesToContents mode
https://bugs.webkit.org/show_bug.cgi?id=39359
Summary
[Qt] TiledBackingStore updates broken when not using resizesToContents mode
Antti Koivisto
Reported
2010-05-19 07:43:53 PDT
This was broken by
http://trac.webkit.org/changeset/59611
Attachments
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2010-05-19 08:14:49 PDT
http://trac.webkit.org/changeset/59765
Kimmo Kinnunen
Comment 2
2010-06-14 05:35:18 PDT
This should probably cherry-picked to qtwebkit-2.0, since
https://bugs.webkit.org/show_bug.cgi?id=39218
was also picked.
Simon Hausmann
Comment 3
2010-07-02 06:52:11 PDT
<cherry-pick-for-backport:
r59765
>
Simon Hausmann
Comment 4
2010-07-02 07:03:16 PDT
Revision
r59765
cherry-picked into qtwebkit-2.0 with commit d59845f6fec84f15da116f50a1a0e52ce26116e9
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug