[Qt] TiledBackingStore updates broken when not using resizesToContents mode https://bugs.webkit.org/show_bug.cgi?id=39359

Rubber-stamped by Kenneth Rohde Christiansen.

Put the back logic that was lost in refactoring.

* WebCoreSupport/ChromeClientQt.cpp:
(WebCore::ChromeClientQt::visibleRectForTiledBackingStore):
* WebCoreSupport/PageClientQt.cpp:
(WebCore::PageClientQGraphicsWidget::graphicsItemVisibleRect):
* WebCoreSupport/PageClientQt.h:
(WebCore::PageClientQWidget::viewResizesToContentsEnabled):
(WebCore::PageClientQGraphicsWidget::viewResizesToContentsEnabled):



Canonical link: https://commits.webkit.org/50883@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59765 268f45cc-cd09-0410-ab3c-d52691b4dbfc